insert link to pages & link home to order pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <button class="btn" type="button" onclick="linktomeat()"> 
+    <button class="btn" type="button" onclick="linkto_order()"> 
         Click here to Order!
     </button>
 </body>
 
-<script src="../javascripts/linkhome.js"></script>
+<script src="../javascripts/linktopages.js"></script>
 
 </html>
