--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,4 +13,4 @@
 <body>
     <a href="order.html"><button type="submit" class="btn">START</button></a>
 </body>
-</html>
+</html> -->
