--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Padthai Shop</title>
     <link rel="stylesheet" href="stylesheets/style_home.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <button class="btn" type="button" onclick="linkto_order()"> 
+    <button class="btn" type="button" onclick="linkto_index()"> 
         Click here to Order!
     </button>
 </body>
