--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Padthai Shop</title>
-    <link rel="stylesheet" href="style_index.css">
+    <title>Index Padthai</title>
+    <link rel="stylesheet" href="stylesheets/style_index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="order.html"><button type="submit" class="btn">START</button></a>
+    <h1>This is index page</h1>
 </body>
-</html> -->
+</html>
